<resources>
    <string name="app_name">AnimeVostorg</string>

    <string name="splash_screen_title_piece_1">Anime</string>
    <string name="splash_screen_title_piece_2">Vostorg</string>
    <string name="splash_screen_title_piece_3">App</string>

    <string name="internet_connection_error">Не удалось подключиться к Интернету.</string>
    <string name="connection_error">Oшибка подключения.</string>

    <string name="no_search_results_found">По вашему запросу ничего не найдено.</string>

    <string name="release_date">Год выхода:</string>
    <string name="genre">Жанр:</string>
    <string name="type">Тип:</string>
    <string name="episodes">Количество серий:</string>
    <string name="director">Режиссёр:</string>
    <string name="rating">Рейтинг:</string>
    <string name="votes">Голосов:</string>

    <string name="search_hint">Поиск аниме</string>
</resources>
