<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/contentScreenRoot"
        android:layout_width="@dimen/content_screen_card_width"
        android:layout_height="@dimen/content_screen_card_height"
        app:cardCornerRadius="@dimen/content_screen_card_corner_radius"
        app:cardElevation="@dimen/content_screen_card_elevation"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/contentScreenCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/contentScreenDescriptionPanel"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/contentScreenNumberOfSeries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle_radius_shape"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="3dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/content_screen_card_view_text_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contentScreenDescriptionPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <HorizontalScrollView
                    android:id="@+id/contentScreenTitleHorizontalScroll"
                    style="@style/HorizontalScrollStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/contentScreenTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/content_screen_card_title_text_size" />
                </HorizontalScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="vertical"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <LinearLayout
                        android:id="@+id/contentScreenReleaseDateLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextAppearanceStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/release_date"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/contentScreenRelease"
                            style="@style/TextAppearanceStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextAppearanceStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/genre"
                            android:textStyle="bold" />

                        <HorizontalScrollView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/TextAppearanceStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </HorizontalScrollView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextAppearanceStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/type"
                            android:textStyle="bold" />

                        <HorizontalScrollView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/TextAppearanceStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </HorizontalScrollView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextAppearanceStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/episodes"
                            android:textStyle="bold" />

                        <HorizontalScrollView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/TextAppearanceStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </HorizontalScrollView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="5dp">

                        <TextView
                            style="@style/TextAppearanceStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="@string/rating"
                            android:textStyle="bold" />

                        <RatingBar
                            style="@style/RatingBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:numStars="5"
                            android:stepSize="0.1" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>