<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import
            alias="view"
            type="android.view.View" />

        <variable
            name="content"
            type="usa.bios.animevostorg.ui.contentscreen.viewmodel.ItemContentScreenViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/itemContentRoot"
            android:layout_width="@dimen/content_screen_card_width"
            android:layout_height="@dimen/content_screen_card_height"
            app:cardCornerRadius="@dimen/content_screen_card_corner_radius"
            app:cardElevation="@dimen/content_screen_card_elevation"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:imageUrl="@{content.contentUrlImagePreview}"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/itemContentDescriptionPanel"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rectangle_radius_shape"
                        android:gravity="center"
                        android:paddingBottom="3dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:paddingTop="3dp"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/content_screen_card_view_text_size"
                        android:textStyle="bold"
                        android:visibility="@{String.valueOf(content.contentSeriesTotal).empty ? view.GONE : view.VISIBLE}"
                        android:text="@{content.contentSeriesTotal}"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/itemContentDescriptionPanel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorWhite"
                    android:orientation="vertical">

                    <HorizontalScrollView
                        style="@style/HorizontalScrollStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:visibility="@{String.valueOf(content.contentTitle).empty ? view.GONE : view.VISIBLE}">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center|start"
                            android:text="@{content.contentTitle}"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/content_screen_card_title_text_size"
                            app:font="@{`duke_fill.ttf`}" />
                    </HorizontalScrollView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:orientation="vertical"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="@{String.valueOf(content.contentYear).empty ? view.GONE : view.VISIBLE}">

                            <TextView
                                style="@style/TextAppearanceStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:text="@string/release_date"
                                android:textStyle="bold" />

                            <TextView
                                style="@style/TextAppearanceStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{content.contentYear}" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="@{String.valueOf(content.contentGenre).empty ? view.GONE : view.VISIBLE}">

                            <TextView
                                style="@style/TextAppearanceStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:text="@string/genre"
                                android:textStyle="bold" />

                            <HorizontalScrollView
                                style="@style/HorizontalScrollStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <TextView
                                    style="@style/TextAppearanceStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{content.contentGenre}" />
                            </HorizontalScrollView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="@{String.valueOf(content.contentType).empty ? view.GONE : view.VISIBLE}">

                            <TextView
                                style="@style/TextAppearanceStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:text="@string/type"
                                android:textStyle="bold" />

                            <HorizontalScrollView
                                style="@style/HorizontalScrollStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <TextView
                                    style="@style/TextAppearanceStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{content.contentType}" />
                            </HorizontalScrollView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="@{content.contentSeries == 0 ? view.GONE : view.VISIBLE}">

                            <TextView
                                style="@style/TextAppearanceStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:text="@string/episodes"
                                android:textStyle="bold" />

                            <HorizontalScrollView
                                style="@style/HorizontalScrollStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <TextView
                                    style="@style/TextAppearanceStyle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{String.valueOf(content.contentSeries)}" />
                            </HorizontalScrollView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingBottom="5dp">

                            <TextView
                                style="@style/TextAppearanceStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:text="@string/rating"
                                android:textStyle="bold" />

                            <RatingBar
                                style="@style/RatingBarStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:numStars="5"
                                android:stepSize="0.1"
                                android:rating="@{content.contentRating}"/>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>